@@ -50,6 +50,8 @@ public class GtkTextFieldPeer extends GtkTextComponentPeer
   implements TextFieldPeer
 {
   native void create (int width);
+  native void gtkWidgetSetBackground (int red, int green, int blue);
+  native void gtkWidgetSetForeground (int red, int green, int blue);
 
   void create ()
   {
@@ -76,6 +78,8 @@ public class GtkTextFieldPeer extends GtkTextComponentPeer
     int text_width = cols * fm.getMaxAdvance ();
 
     create (text_width);
+
+    setEditable (((TextField) awtComponent).isEditable ());
   }
 
   native int gtkEntryGetBorderWidth ();
